--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
   --text-color-light: #c7d1db;
+  --bg-color-dark: #0c0c0c;
 }
 
 html,
@@ -16,6 +17,7 @@ body {
   width: 100%;
   font-family: var(--primary-font);
   color: #c7d1db;
+  background-color: #0c0c0c;
 }
 
 * {
